# wsi-bayes

./: README.md  bayes_network.py  main.py  pyproject.toml  test.py  tree_training.py
bayes/: bayes_network.py  test_bayes_network.py
data/: data1.csv  data2.csv
docs/: cwiczenie-07.html  data.csv  network.json  network2.json  report.md
trees/: dataset.py  decision_trees.py  tree_evaluation.py
